--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.40.0",
+    "allure-commandline": "^2.36.0",
     "allure-playwright": "^2.9.2"
   }
 }
