--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:checkout": "playwright test tests/checkout.e2e.spec.ts --project=chromium",
     "allure:generate": "allure generate allure-results --clean -o allure-report",
     "allure:open": "allure open allure-report",
-    "allure:serve": "allure serve allure-results"
+    "allure:serve": "allure serve allure-results",
+    "lint": "eslint tests pages fixtures utils",
+    "lint:fix": "eslint tests pages fixtures utils --fix"
   },
   "keywords": [
     "playwright",
@@ -25,6 +27,11 @@
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "allure-commandline": "^2.36.0",
-    "allure-playwright": "^2.9.2"
+    "allure-playwright": "^2.9.2",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-playwright": "^0.15.0",
+    "typescript": "^5.0.0"
   }
 }
